apps/mqtt/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats-loadbalancer
  namespace: mqtt
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: nats
    app.kubernetes.io/instance: nats
    app.kubernetes.io/name: nats
  internalTrafficPolicy: Cluster
  ipFamilyPolicy: SingleStack
  ipFamilies:
  - IPv4
  sessionAffinity: None
  ports:
  - name: nats
    port: 4222
    protocol: TCP
    targetPort: nats
    appProtocol: tcp
  - name: mqtt
    port: 1883
    protocol: TCP
    targetPort: mqtt
    appProtocol: tcp
