apps/mqtt/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
  name: nats-websocket
  namespace: mqtt
spec:
  ingressClassName: cilium
  rules:
  - host: nats-ws.invertedorigin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nats
            port:
              number: 8080
  tls:
  - hosts:
    - nats-ws.invertedorigin.com
    secretName: nats-ws-tls-domain
